--- a/sass/site/layout/_layout-skin-1.scss
+++ b/sass/site/layout/_layout-skin-1.scss
@@ -155,9 +155,14 @@ body{
 	.ast-article-single:last-child {
 		padding-bottom: 0;
 	}
-	.ast-article-post:first-child, 
-	.ast-article-single:first-child {
-		padding-top: 3em;
+	@media (max-width: $mx-col-md) {
+		.ast-article-post:first-child, 
+		.ast-article-single:first-child {
+			padding-top: 3em;
+		}
+		.ast-pagination {
+			padding-bottom: 1.5em;
+		}
 	}
 	@media (max-width: $mx-col-sm) {
 		.ast-container {
@@ -166,6 +171,10 @@ body{
 		}
 		.ast-pagination {
 			padding: 2em;
+		}
+		.ast-article-post:first-child, 
+		.ast-article-single:first-child {
+			padding-top: 0;
 		}
 	}
 }
